--- a/.github/workflows/vue_build.yml
+++ b/.github/workflows/vue_build.yml
@@ -3,7 +3,7 @@ run-name: Building Vue project
 on:
   push:
     branches:
-      - master
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
