--- a/.github/workflows/vue_build.yml
+++ b/.github/workflows/vue_build.yml
@@ -9,10 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - name: Use Node.js 16.14.2
+      - name: Setup Node
         uses: actions/setup-node@v1
         with:
-          node-version: 16.15.2
+          node-version: '16.14.2'
       - name: Build and Deploy
         uses: JamesIves/github-pages-deploy-action@releases/v2
         env:
