--- a/.github/workflows/vue_build.yml
+++ b/.github/workflows/vue_build.yml
@@ -13,11 +13,13 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '16.14.2'
-      - name: Build and Deploy
-        uses: JamesIves/github-pages-deploy-action@releases/v2
-        env:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          BASE_BRANCH: master
-          BRANCH: gh-pages
-          FOLDER: dist
-          BUILD_SCRIPT: npm ci && npm run build
+      - name: Install and Build 🔧
+        run: |
+          npm ci
+          npm run build
+      - name: Deploy 🚀
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          publish_branch: gh-pages
+          publish_dir: ./dist
